[project]
name = "review-cli"
version = "0.1.2"
description = "Ferramenta CLI para inicializar ambiente de Code Review (Multi-Agente e Multi-Plataforma)"
requires-python = ">=3.11"
dependencies = [
    "typer[all]", # Usar [all] para garantir 'rich'
    "rich",
    "readchar",
]

[project.scripts]
review-cli = "code_review:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_review"]
